--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "option",
     "optional"
   ],
-  "main": "index.js",
+  "main": "index.dist.js",
   "scripts": {
-    "test": "standard && mocha"
+    "test": "standard && mocha",
+    "build": "babel --presets es2015 index.js > index.dist.js"
   },
   "repository": "git@github.com:jsdnxx/nullable-util.git",
   "license": "ISC",
@@ -19,6 +20,9 @@
     "nullable": "^2.0.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "standard": "^8.6.0"
