--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "standard": "^8.6.0"
+  },
+  "standard": {
+    "ignore": "index.dist.js"
   }
 }
